<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_65"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="@dimen/size_5"
            android:title="@string/flickr"
            app:navigationIcon="@drawable/back" />


        <ImageView
            android:id="@+id/photoView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_300"
            android:contentDescription="@string/flickr"
            android:scaleType="fitXY" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/author"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/authorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_regular"
            android:textSize="@dimen/sp_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/author_id"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/authorIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_regular"
            android:textSize="@dimen/sp_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/tags_detail"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tagsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_regular"
            android:textSize="@dimen/sp_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/published_detail"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/publishedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:textSize="@dimen/sp_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/date_taken_detail"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/datetaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/roboto_slab_regular"
            android:textSize="@dimen/sp_16" />


    </LinearLayout>
</ScrollView>
